--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,8 @@
-<h1>OVERMIND</h1>
+{% extends "main.html" %}
+
+{% block content %}
 <h2>Aplikacje</h2>
 <ul>
     <li><a href="/lists/">Listy zadań</a></li>
 </ul>
+{% endblock %}
