--- a/Lists/templates/Lists/list_detail.html
+++ b/Lists/templates/Lists/list_detail.html
@@ -1,10 +1,15 @@
-<html>
-<body>
-    <h2>Lista - {{ list.title }}<h2>
-    {% for item in items %}
-    <ul>
-        <li>{{ item.title }}</li>
-    </ul>
+{% extends "main.html" %}
+{% block content %}
+<a href="/lists/">Back</a>
+<h2>Lista - {{ list.title }}</h2>
+<table>
+{% for item in items %}
+    <tr>
+        <td><input type="checkbox"></input></td>
+        <td>{{ item.title }}</td>
+        <td><a href='#'>Wykonaj</a>
+    </tr>
     {% endfor %}
-</body>
-</html>
+</table>
+<a href='/lists/{{ list.id }}/add/'>Dodaj item</a>
+{% endblock %}
