A few changes and a whole new app

--- a/Lists/templates/Lists/list_detail.html
+++ b/Lists/templates/Lists/list_detail.html
@@ -3,11 +3,18 @@
 <a href="/lists/">Back</a>
 <h2>Lista - {{ list.title }}</h2>
 <table>
+    <thead>
+       <tr>
+           <td>Checked</td>
+           <td>Tytuł</td>
+           <td>Score</td>
+       </tr>
+    </thead>
 {% for item in items %}
     <tr>
         <td><input type="checkbox"></input></td>
         <td>{{ item.title }}</td>
-        <td><a href='#'>Wykonaj</a>
+        <td>{{ item.score }}</td>
     </tr>
     {% endfor %}
 </table>
