--- a/templates/index.html
+++ b/templates/index.html
@@ -4,5 +4,6 @@
 <h2>Aplikacje</h2>
 <ul>
     <li><a href="/lists/">Listy zadań</a></li>
+    <li><a href="/accountant/">Wydatki</a></li>
 </ul>
 {% endblock %}
