--- a/templates/main.html
+++ b/templates/main.html
@@ -22,6 +22,13 @@
             width: 800px;
             margin: auto;
         }
+        table {
+            border-collapse: collapse;
+        }
+        td {
+            padding: 5px;
+            border: 1px solid #555;
+        }
     </style>
 </head>
 <body>
