Voting now works properly

--- a/Lists/templates/Lists/list_detail.html
+++ b/Lists/templates/Lists/list_detail.html
@@ -15,6 +15,9 @@
         <td><input type="checkbox"></input></td>
         <td>{{ item.title }}</td>
         <td>{{ item.score }}</td>
+        {% if item.can_vote %}
+            <td><a href='vote/{{ item.id }}/'>Vote!</a></td>
+        {% endif %}
     </tr>
     {% endfor %}
 </table>
